Theme: Fix spacing of field list rows
Previously the left and right columns were not on the same vertical plane.

--- a/build_files/theme/css/theme_overrides.css
+++ b/build_files/theme/css/theme_overrides.css
@@ -74,6 +74,15 @@ dl dt {
 dl.field-list {
 	display: grid;
 	grid-template-columns: auto minmax(80%, 95%);
+	row-gap: 0.125em;
+}
+
+.field-list > dt {
+	margin-top: 0 !important;
+}
+
+.field-list > dd > p {
+	margin-top: 0 !important;
 }
 
 dl.field-list > dd > p:last-child {
